# FlarePulse

./: .gitignore  Dockerfile  README.md  pyproject.toml
chat-ui/: package-lock.json
chat-ui/src/: App.css  App.js
chat-ui/src/components/: ChatInterface.css  ChatInterface.js
src/data/: training_data.json
src/flare_ai_social/: __init__.py  bot_manager.py  compare.py  main.py  settings.py  tune_model.py
src/flare_ai_social/ai/: base.py  gemini.py  openrouter.py
src/flare_ai_social/api/routes/: chat.py
src/flare_ai_social/flare/: getFLRPrice.py  getXRPPrice.py
src/flare_ai_social/prompts/: __init__.py  templates.py
src/flare_ai_social/telegram/: __init__.py  service.py
src/flare_ai_social/twitter/: __init__.py  service.py
tests/: test_prompts.py
